updated alt script so that all accounts can be entered on single line for a given eto run date

--- a/cost_distribution.ipynb
+++ b/cost_distribution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -27,73 +27,169 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Date</th>\n",
-       "      <th>PI</th>\n",
-       "      <th>Project</th>\n",
        "      <th>Account</th>\n",
-       "      <th>Fraction</th>\n",
-       "      <th>Charge</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2022-07-06</td>\n",
-       "      <td>Alexander</td>\n",
-       "      <td>Bridge</td>\n",
        "      <td>CL005</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2022-12-19</td>\n",
-       "      <td>Johnson</td>\n",
-       "      <td>unknown</td>\n",
        "      <td>CL001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2023-02-14</td>\n",
-       "      <td>Hoareau</td>\n",
-       "      <td>unknown</td>\n",
        "      <td>CL002</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2023-03-30</td>\n",
-       "      <td>Shah/Rieke</td>\n",
-       "      <td>UH3</td>\n",
        "      <td>CL007</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2023-04-13</td>\n",
-       "      <td>Shah/Rieke</td>\n",
-       "      <td>UH3</td>\n",
        "      <td>CL007</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>CL008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2023-05-30</td>\n",
+       "      <td>CL008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2023-06-08</td>\n",
+       "      <td>CL008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2023-06-23</td>\n",
+       "      <td>CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2023-08-22</td>\n",
+       "      <td>CL007, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2023-08-24</td>\n",
+       "      <td>CL007, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2023-08-28</td>\n",
+       "      <td>CL007, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2023-09-25</td>\n",
+       "      <td>CL007, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2023-09-28</td>\n",
+       "      <td>CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2023-10-10</td>\n",
+       "      <td>CL003, CL002, CL001, CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2023-10-26</td>\n",
+       "      <td>CL003, CL002, CL001, CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>CL002, CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2023-11-14</td>\n",
+       "      <td>CL003, CL001, CL007, CL002, CL006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>CL003, CL006, CL001, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>CL003, CL001, CL006, CL002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024-01-18</td>\n",
+       "      <td>CL001, CL004, CL006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024-02-06</td>\n",
+       "      <td>CL010, CL001, CL000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2024-02-22</td>\n",
+       "      <td>CL010, CL001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024-03-04</td>\n",
+       "      <td>CL007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024-03-08</td>\n",
+       "      <td>CL010, CL001, CL013</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Date          PI  Project Account  Fraction  Charge\n",
-       "0 2022-07-06   Alexander   Bridge   CL005       1.0    40.0\n",
-       "1 2022-12-19     Johnson  unknown   CL001       1.0    40.0\n",
-       "2 2023-02-14     Hoareau  unknown   CL002       1.0    40.0\n",
-       "3 2023-03-30  Shah/Rieke      UH3   CL007       1.0    40.0\n",
-       "4 2023-04-13  Shah/Rieke      UH3   CL007       1.0    40.0"
+       "         Date                            Account\n",
+       "0  2022-07-06                              CL005\n",
+       "1  2022-12-19                              CL001\n",
+       "2  2023-02-14                              CL002\n",
+       "3  2023-03-30                              CL007\n",
+       "4  2023-04-13                              CL007\n",
+       "5  2023-05-16                              CL008\n",
+       "6  2023-05-30                              CL008\n",
+       "7  2023-06-08                              CL008\n",
+       "8  2023-06-23                              CL007\n",
+       "9  2023-08-22                       CL007, CL002\n",
+       "10 2023-08-24                       CL007, CL002\n",
+       "11 2023-08-28                       CL007, CL002\n",
+       "12 2023-09-25                       CL007, CL002\n",
+       "13 2023-09-28                              CL007\n",
+       "14 2023-10-10         CL003, CL002, CL001, CL007\n",
+       "15 2023-10-26         CL003, CL002, CL001, CL007\n",
+       "16 2023-11-07                       CL002, CL007\n",
+       "17 2023-11-14  CL003, CL001, CL007, CL002, CL006\n",
+       "18 2024-01-02         CL003, CL006, CL001, CL002\n",
+       "19 2024-01-04         CL003, CL001, CL006, CL002\n",
+       "20 2024-01-18                CL001, CL004, CL006\n",
+       "21 2024-02-06                CL010, CL001, CL000\n",
+       "22 2024-02-22                       CL010, CL001\n",
+       "23 2024-03-04                              CL007\n",
+       "24 2024-03-08                CL010, CL001, CL013"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,13 +202,13 @@
     "\n",
     "use_data = 'ETO use.xlsx'\n",
     "\n",
-    "use_df = pd.read_excel(use_data, sheet_name='ETO Use')\n",
-    "use_df.head()"
+    "use_df = pd.read_excel(use_data, sheet_name='eto_use_alt')\n",
+    "use_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +400,7 @@
        "14  emergency medicine  Physiologic signatures for endovascular interv...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
