--- a/cost_distribution_alt.ipynb
+++ b/cost_distribution_alt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "### INPUTS ###\n",
     "\n",
     "### date range to be invoiced\n",
-    "date_min = '2024-04-02'\n",
+    "date_min = '2024-04-01'\n",
     "date_max = '2024-04-30'\n",
     "\n",
     "# Create Directory for saving invoice\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,67 +119,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0.3333333333333333' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "  charges_df['Number Uses'][i] = sum(num_uses)\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_11196/2703409962.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '13.333333333333332' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n"
      ]
     }
@@ -208,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,17 +228,39 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CL001</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>13.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CL007</td>\n",
+       "      <td>Shah/Rieke</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>53.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CL010</td>\n",
+       "      <td>Silverton</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>13.33</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Account, PI, Number Uses, Total ($)]\n",
-       "Index: []"
+       "  Account          PI  Number Uses  Total ($)\n",
+       "1   CL001     Johnson         0.33      13.33\n",
+       "7   CL007  Shah/Rieke         1.33      53.33\n",
+       "9   CL010   Silverton         0.33      13.33"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
