updating with a py file that can be run from terminal with month and year prompts

--- a/cost_distribution_alt.ipynb
+++ b/cost_distribution_alt.ipynb
@@ -10,6 +10,7 @@
     "\n",
     "import pandas as pd\n",
     "import os \n",
+    "import calendar\n",
     "\n",
     "data = 'ETO use.xlsx'\n",
     "\n",
@@ -28,16 +29,26 @@
    "source": [
     "### INPUTS ###\n",
     "\n",
-    "### date range to be invoiced\n",
-    "date_min = '2024-04-01'\n",
-    "date_max = '2024-04-30'\n",
+    "# Function to convert month name to its corresponding number\n",
+    "def month_name_to_number(month_name):\n",
+    "    # Get the month number as an integer\n",
+    "    month_number = list(calendar.month_name).index(month_name.capitalize())\n",
+    "    return month_number\n",
     "\n",
-    "# Create Directory for saving invoice\n",
-    "directory = \"2024.04 Invoicing\"\n",
+    "# Get input from the user\n",
+    "month_name = input(\"Please enter the month name: \")\n",
+    "year = str(input(\"Please enter 4-digit year: \"))\n",
     "\n",
-    "month = 'April'\n",
-    "year = '2024'\n",
-    "\n"
+    "# Convert the month name to its corresponding number\n",
+    "month_number = month_name_to_number(month_name)\n",
+    "\n",
+    "formatted_month_number = '{:02d}'.format(month_number)\n",
+    "formatted_month_number_max = '{:02d}'.format(month_number + 1)\n",
+    "formatted_month_number = str(formatted_month_number)\n",
+    "formatted_month_number_max = str(formatted_month_number_max)\n",
+    "\n",
+    "date_min = f\"{year}-{formatted_month_number}-01\"\n",
+    "date_max = f\"{year}-{formatted_month_number_max}-01\""
    ]
   },
   {
@@ -83,7 +94,7 @@
     "\n",
     "#### Date range of interest must be updated ####\n",
     "\n",
-    "period_of_interest_df = use_df_expanded[(use_df_expanded['Date'] >= date_min) & (use_df_expanded['Date'] <= date_max)]"
+    "period_of_interest_df = use_df_expanded[(use_df_expanded['Date'] >= date_min) & (use_df_expanded['Date'] < date_max)]"
    ]
   },
   {
@@ -126,49 +137,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:11: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0.3333333333333333' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:11: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0.3333333333333333' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  charges_df['Number Uses'][i] = sum(num_uses)\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: SettingWithCopyWarning: \n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n",
-      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_69011/2703409962.py:14: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '13.333333333333332' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/ky/zl0049892b138kmk5t49jgjr0000gp/T/ipykernel_86736/2703409962.py:14: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '13.333333333333332' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  charges_df['Total ($)'][i] = charges_df['Number Uses'][i]*40\n"
      ]
     }
@@ -285,7 +296,7 @@
     "### File save path needs to be updated for each invoice ###\n",
     "\n",
     "# Create Directory \n",
-    "directory = directory\n",
+    "directory = f\"{year}.{formatted_month_number} Invoicing\"\n",
     "  \n",
     "# Parent Directory path \n",
     "parent_dir = \"../eto_billing\"\n",
@@ -296,7 +307,7 @@
     "if not os.path.exists(path):\n",
     "    os.makedirs(path) \n",
     "\n",
-    "charges_df.to_excel(f\"2024.04 Invoicing/ethylene_oxide_invoice_{month}_{year}.xlsx\", index=False)"
+    "charges_df.to_excel(f\"{directory}/ethylene_oxide_invoice_{month_name}_{year}.xlsx\", index=False)"
    ]
   }
  ],
